# lens-optimizer

./: README.md  pyproject.toml
src/tracer/: datatypes.py  intersection.py  ray_fan.py  refraction.py  trace.py
tests/: test_intersection.py  test_refraction.py  test_trace.py
