[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lens-optimizer"
version = "0.1.0"
description = "RL-Guided Lens System Optimizer with Differentiable Ray Tracing"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "optax>=0.1.7",
    "jaxopt>=0.8",
    "gymnasium>=0.29",
    "stable-baselines3>=2.1",
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-xdist>=3.5"]
demo = ["gradio>=4.0", "streamlit>=1.28"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
